--- a/sesion02/Views/Shared/_Layout.cshtml
+++ b/sesion02/Views/Shared/_Layout.cshtml
@@ -25,6 +25,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <!--agregando un nav-item-->
+                         <li class="nav-item">
+                             <a class="nav-link text-dark" asp-area="" asp-controller="Negocios" asp-action="Index">Productos</a>
+                         </li>
+
                     </ul>
                 </div>
             </div>
