--- a/sesion02/Views/Shared/_Layout.cshtml
+++ b/sesion02/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                          <li class="nav-item">
                              <a class="nav-link text-dark" asp-area="" asp-controller="Negocios" asp-action="Index">Productos</a>
                          </li>
-
+                        <!--agregando PAGINACION-->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Negocios" asp-action="PaginacionProductos">Paginacion</a>
+                        </li>
                     </ul>
                 </div>
             </div>
