vista filtroProducto implementado con oaginacion

--- a/sesion02/Views/Shared/_Layout.cshtml
+++ b/sesion02/Views/Shared/_Layout.cshtml
@@ -33,6 +33,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Negocios" asp-action="PaginacionProductos">Paginacion</a>
                         </li>
+                        <!--agregando busqueda FiltroProductos + PAGINACION-->
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Negocios" asp-action="FiltroProductos">Filtro</a>
+                        </li>
                     </ul>
                 </div>
             </div>
