vistas CreateProducto y FiltroProductos conectadas

--- a/sesion02/Views/Negocios/FiltroProductos.cshtml
+++ b/sesion02/Views/Negocios/FiltroProductos.cshtml
@@ -15,11 +15,15 @@
     <button> Buscar </button>
 }
 
+<p>
+    <a asp-action="CreateProducto"> Nuevo Producto</a>
+</p>
 
+<!--
 
 <p>
     <a asp-action="Create">Create New</a>
-</p>
+</p> -->
 <table class="table">
     <thead>
         <tr>
